biggest emissors ordenado y exportado a csv (otra vez)

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
        "4     381.135610     158.400094    25546.77744  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
        "4     381.135610     158.400094    25546.77744  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
        "       'United States of America'], dtype=object)"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +820,7 @@
        "1990"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
        "  <thead>\n",
        "    <tr>\n",
        "      <th></th>\n",
-       "      <th colspan=\"2\" halign=\"left\">co2_gigagrams</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">CO2_Tonnes</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th></th>\n",
@@ -903,7 +903,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                co2_gigagrams               \n",
+       "                   CO2_Tonnes               \n",
        "                          sum           mean\n",
        "Country_or_Area                             \n",
        "Australia        7.969936e+06  346518.972130\n",
@@ -913,7 +913,7 @@
        "Bulgaria         1.232061e+06   53567.888867"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,14 +921,14 @@
    "source": [
     "#we will analyze biggest areas/countries emissions data\n",
     "biggest_emissors=emissions2[['Country_or_Area','Year','co2_gigagrams']]\n",
-    "biggest_emissors.columns=[('Country_or_Area','Year','CO2_Tonnes')]\n",
-    "biggest_emissors=biggest_emissors.groupby('Country_or_Area').agg({'co2_gigagrams':['sum','mean']})\n",
+    "biggest_emissors.columns=['Country_or_Area','Year','CO2_Tonnes']\n",
+    "biggest_emissors=biggest_emissors.groupby('Country_or_Area').agg({'CO2_Tonnes':['sum','mean']})\n",
     "biggest_emissors.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +956,7 @@
        "  <thead>\n",
        "    <tr>\n",
        "      <th></th>\n",
-       "      <th colspan=\"2\" halign=\"left\">co2_gigagrams</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">CO2_Tonnes</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th></th>\n",
@@ -1025,7 +1025,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                         co2_gigagrams              \n",
+       "                            CO2_Tonnes              \n",
        "                                   sum          mean\n",
        "Country_or_Area                                     \n",
        "United States of America  1.302436e+08  5.662765e+06\n",
@@ -1040,31 +1040,19 @@
        "Ukraine                   8.378768e+06  3.642943e+05"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "biggest_emissors=biggest_emissors.sort_values(by=[('co2_gigagrams','sum')],ascending=False).head(10)\n",
+    "biggest_emissors=biggest_emissors.sort_values(by=[('CO2_Tonnes','sum')],ascending=False).head(10)\n",
     "biggest_emissors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#I prefer to manage Tonnes in this case\n",
-    "biggest_emissors=biggest_emissors.apply(lambda x:(x/1e6),axis=1)\n",
-    "clean.rounding(biggest_emissors)\n",
-    "biggest_emissors.columns=[('CO2_Tonnes'),('CO2_Tonnes','mean')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -1080,121 +1068,136 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
+       "    <tr>\n",
        "      <th></th>\n",
-       "      <th>CO2_Tonnes</th>\n",
-       "      <th>(CO2_Tonnes, mean)</th>\n",
+       "      <th>Country_or_Area</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">CO2_Tonnes</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Country_or_Area</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th>sum</th>\n",
+       "      <th>mean</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>United States of America</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>0</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>130.24</td>\n",
+       "      <td>5.66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>European Union</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>1</th>\n",
+       "      <td>European Union</td>\n",
+       "      <td>95.35</td>\n",
+       "      <td>4.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Russian Federation</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>2</th>\n",
+       "      <td>Russian Federation</td>\n",
+       "      <td>38.08</td>\n",
+       "      <td>1.66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Japan</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>3</th>\n",
+       "      <td>Japan</td>\n",
+       "      <td>28.15</td>\n",
+       "      <td>1.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Germany</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>4</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>20.64</td>\n",
+       "      <td>0.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>United Kingdom</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>5</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>12.64</td>\n",
+       "      <td>0.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Canada</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>6</th>\n",
+       "      <td>Canada</td>\n",
+       "      <td>12.30</td>\n",
+       "      <td>0.53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Italy</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>7</th>\n",
+       "      <td>Italy</td>\n",
+       "      <td>10.32</td>\n",
+       "      <td>0.45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>France</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>8</th>\n",
+       "      <td>France</td>\n",
+       "      <td>9.32</td>\n",
+       "      <td>0.41</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Ukraine</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>9</th>\n",
+       "      <td>Ukraine</td>\n",
+       "      <td>8.38</td>\n",
+       "      <td>0.36</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                          CO2_Tonnes  (CO2_Tonnes, mean)\n",
-       "Country_or_Area                                         \n",
-       "United States of America         0.0                 0.0\n",
-       "European Union                   0.0                 0.0\n",
-       "Russian Federation               0.0                 0.0\n",
-       "Japan                            0.0                 0.0\n",
-       "Germany                          0.0                 0.0\n",
-       "United Kingdom                   0.0                 0.0\n",
-       "Canada                           0.0                 0.0\n",
-       "Italy                            0.0                 0.0\n",
-       "France                           0.0                 0.0\n",
-       "Ukraine                          0.0                 0.0"
+       "            Country_or_Area CO2_Tonnes      \n",
+       "                                   sum  mean\n",
+       "0  United States of America     130.24  5.66\n",
+       "1            European Union      95.35  4.15\n",
+       "2        Russian Federation      38.08  1.66\n",
+       "3                     Japan      28.15  1.22\n",
+       "4                   Germany      20.64  0.90\n",
+       "5            United Kingdom      12.64  0.55\n",
+       "6                    Canada      12.30  0.53\n",
+       "7                     Italy      10.32  0.45\n",
+       "8                    France       9.32  0.41\n",
+       "9                   Ukraine       8.38  0.36"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#I prefer to manage Tonnes in this case\n",
+    "biggest_emissors=biggest_emissors.apply(lambda x:(x/1e6),axis=1)\n",
+    "clean.rounding(biggest_emissors)\n",
+    "biggest_emissors=biggest_emissors.reset_index()\n",
     "biggest_emissors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please, enter the name for the cvs file you want to exportbiggest_emisors\n"
+      "Please, enter the name for the cvs file you want to exportbiggest_emissors\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'biggest_emisors has been exported to cvs file'"
+       "'biggest_emissors has been exported to cvs file'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
