empiezo a analizar vehiculos registrados

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
        "4                           27                  244  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
        "(7385, 12)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +900,7 @@
        "4                           27                  244  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +927,7 @@
        "       'STATION WAGON - MID-SIZE', 'PICKUP TRUCK - SMALL'], dtype=object)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +947,7 @@
        "array(['Z', 'D', 'X', 'E', 'N'], dtype=object)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,15 +971,15 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### We open the last dataset, about registered vehicles in the world"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -1068,13 +1068,13 @@
        "4              Armenia                                              NaN"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# we open the second dataset about registered vehicles in the world\n",
+    "\n",
     "register = man.open_cvs()\n",
     "register.head()\n",
     "##registered_vehicles is the file in input folder"
@@ -1082,61 +1082,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Data_Source</th>\n",
+       "      <th>Number_of_registered_vehicles</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>RS_001</td>\n",
+       "      <td>655 357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>RS_002</td>\n",
+       "      <td>563 106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Antigua and Barbuda</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>RS_003</td>\n",
+       "      <td>36 030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>RS_004</td>\n",
+       "      <td>21 633 587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Armenia</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array(['Afghanistan', 'Albania', 'Antigua and Barbuda', 'Argentina',\n",
-       "       'Armenia', 'Australia', 'Austria', 'Azerbaijan', 'Bangladesh',\n",
-       "       'Barbados', 'Belarus', 'Belgium', 'Belize', 'Benin', 'Bhutan',\n",
-       "       'Bolivia (Plurinational State of)', 'Bosnia and Herzegovina',\n",
-       "       'Botswana', 'Brazil', 'Bulgaria', 'Burkina Faso', 'Burundi',\n",
-       "       'Cabo Verde', 'Cambodia', 'Cameroon', 'Canada',\n",
-       "       'Central African Republic', 'Chad', 'Chile', 'China', 'Colombia',\n",
-       "       'Comoros', 'Cook Islands', 'Costa Rica', \"CÃ´te d'Ivoire\",\n",
-       "       'Croatia', 'Cuba', 'Cyprus', 'Czechia', 'Denmark', 'Dominica',\n",
-       "       'Dominican Republic', 'Ecuador', 'Egypt', 'El Salvador',\n",
-       "       'Equatorial Guinea', 'Eritrea', 'Estonia', 'Eswatini', 'Ethiopia',\n",
-       "       'Fiji', 'Finland', 'France', 'Gambia', 'Georgia', 'Germany',\n",
-       "       'Ghana', 'Greece', 'Grenada', 'Guatemala', 'Guinea',\n",
-       "       'Guinea-Bissau', 'Guyana', 'Honduras', 'Hungary', 'Iceland',\n",
-       "       'India', 'Indonesia', 'Iran (Islamic Republic of)', 'Iraq',\n",
-       "       'Ireland', 'Israel', 'Italy', 'Jamaica', 'Japan', 'Jordan',\n",
-       "       'Kazakhstan', 'Kenya', 'Kiribati', 'Kuwait', 'Kyrgyzstan',\n",
-       "       \"Lao People's Democratic Republic\", 'Latvia', 'Lebanon', 'Liberia',\n",
-       "       'Libya', 'Lithuania', 'Luxembourg', 'Madagascar', 'Malaysia',\n",
-       "       'Maldives', 'Mali', 'Malta', 'Mauritius', 'Mexico',\n",
-       "       'Micronesia (Federated States of)', 'Mongolia', 'Montenegro',\n",
-       "       'Morocco', 'Mozambique', 'Myanmar', 'Namibia', 'Nepal',\n",
-       "       'Netherlands', 'New Zealand', 'Niger', 'Nigeria', 'Norway',\n",
-       "       'occupied Palestinian territory, including east Jerusalem', 'Oman',\n",
-       "       'Pakistan', 'Panama', 'Papua New Guinea', 'Paraguay', 'Peru',\n",
-       "       'Philippines', 'Poland', 'Portugal', 'Qatar', 'Republic of Korea',\n",
-       "       'Republic of Moldova', 'Republic of North Macedonia', 'Romania',\n",
-       "       'Russian Federation', 'Rwanda', 'Saint Lucia', 'Samoa',\n",
-       "       'San Marino', 'Sao Tome and Principe', 'Saudi Arabia', 'Senegal',\n",
-       "       'Serbia', 'Seychelles', 'Singapore', 'Slovakia', 'Slovenia',\n",
-       "       'Somalia', 'South Sudan', 'Spain', 'Sri Lanka', 'Sudan',\n",
-       "       'Suriname', 'Sweden', 'Switzerland', 'Syrian Arab Republic',\n",
-       "       'Tajikistan', 'Thailand', 'Timor-Leste', 'Togo', 'Tonga',\n",
-       "       'Trinidad and Tobago', 'Tunisia', 'Turkey', 'Uganda', 'Ukraine',\n",
-       "       'United Arab Emirates',\n",
-       "       'United Kingdom of Great Britain and Northern Ireland',\n",
-       "       'United Republic of Tanzania', 'United States of America',\n",
-       "       'Uruguay', 'Venezuela (Bolivarian Republic of)', 'Viet Nam',\n",
-       "       'Zimbabwe'], dtype=object)"
+       "               Country   Year Data_Source Number_of_registered_vehicles\n",
+       "0          Afghanistan   2013      RS_001                       655 357\n",
+       "1              Albania   2016      RS_002                       563 106\n",
+       "2  Antigua and Barbuda   2016      RS_003                        36 030\n",
+       "3            Argentina   2016      RS_004                    21 633 587\n",
+       "4              Armenia                                              NaN"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "register.Country.unique()"
+    "#we will rename columns removing blank spaces to avoid  problems in future by calling a function from the\n",
+    "# file columns.py\n",
+    "clean.rename_columns(register)\n",
+    "register.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country                          0\n",
+       "Year                             0\n",
+       "Data_Source                      0\n",
+       "Number_of_registered_vehicles    1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "register.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Number_of_registered_vehicles</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>655 357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>563 106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Antigua and Barbuda</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>36 030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>21 633 587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>18 326 236</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Country   Year Number_of_registered_vehicles\n",
+       "0          Afghanistan   2013                       655 357\n",
+       "1              Albania   2016                       563 106\n",
+       "2  Antigua and Barbuda   2016                        36 030\n",
+       "3            Argentina   2016                    21 633 587\n",
+       "5            Australia   2016                    18 326 236"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#We will drop Armenia as is the only country with no records \n",
+    "register=register.dropna(0)\n",
+    "register=register[['Country','Year','Number_of_registered_vehicles']]\n",
+    "register.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please, enter the name for the cvs file you want to exportregister\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'register has been exported to cvs file'"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##we save our desired df as cvs file so as to open it in another jupyter-notebook\n",
+    "man.export_cvs(register)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
