--- a/emissions_analysis.ipynb
+++ b/emissions_analysis.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -66,55 +66,166 @@
        "      <th></th>\n",
        "      <th>Year</th>\n",
        "      <th>CO2_emissions</th>\n",
+       "      <th>Year_interval</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1751</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1750</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1752</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1750</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1753</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1750</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1754</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1750</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1755</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1756</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>1750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1757</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>1750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1758</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>1750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1759</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>1750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1760</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>1750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1761</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>1750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1762</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>1750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1763</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>1750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1764</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>1750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1765</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>1750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>1766</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>1750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>1767</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>1750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>1768</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>1750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1769</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>1750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>1770</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>1750</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Year  CO2_emissions\n",
-       "0  1751            0.0\n",
-       "1  1752            0.0\n",
-       "2  1753            0.0\n",
-       "3  1754            0.0\n",
-       "4  1755            0.0"
+       "    Year  CO2_emissions Year_interval\n",
+       "0   1751           0.00          1750\n",
+       "1   1752           0.00          1750\n",
+       "2   1753           0.00          1750\n",
+       "3   1754           0.00          1750\n",
+       "4   1755           0.00          1750\n",
+       "5   1756           0.01          1750\n",
+       "6   1757           0.01          1750\n",
+       "7   1758           0.01          1750\n",
+       "8   1759           0.01          1750\n",
+       "9   1760           0.01          1750\n",
+       "10  1761           0.01          1750\n",
+       "11  1762           0.01          1750\n",
+       "12  1763           0.01          1750\n",
+       "13  1764           0.01          1750\n",
+       "14  1765           0.02          1750\n",
+       "15  1766           0.02          1750\n",
+       "16  1767           0.02          1750\n",
+       "17  1768           0.02          1750\n",
+       "18  1769           0.02          1750\n",
+       "19  1770           0.02          1750"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# we check that the DataFrame exportation is correct\n",
-    "world_emissions.head()"
+    "world_emissions.head(20)"
    ]
   },
   {
@@ -312,10 +423,31 @@
     }
    ],
    "source": [
-    "#we wil import our previously cleaned biggest_emissors cvs file to take conclusions out of it\n",
-    "biggest_emissors=man.open_cvs()\n",
-    "#biggest_emissors file in src folder"
+    "#we wil import our previously cleaned vehicles cvs file to take conclusions out of it\n",
+    "vehicles=man.open_cvs()\n",
+    "#vehicles file in src folder"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### European Comission Expects ZERO CO2 emissions in 2050"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -328,7 +460,138 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### European Comission Expects ZERO CO2 emissions in 2050"
+    "### CO2 emissions produced by vehicles worldwide"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please, enter the folder where your cvs file is saved:\n",
+      "src\n",
+      "Please, enter the name for the cvs file you want to open without extension:\n",
+      "register\n"
+     ]
+    }
+   ],
+   "source": [
+    "#we wil import our previously cleaned register cvs file to take conclusions out of it\n",
+    "register=man.open_cvs()\n",
+    "#register file in src folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Number_of_registered_vehicles</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>655 357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>563 106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Antigua and Barbuda</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>36 030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>21 633 587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>18 326 236</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Country   Year Number_of_registered_vehicles\n",
+       "0          Afghanistan   2013                       655 357\n",
+       "1              Albania   2016                       563 106\n",
+       "2  Antigua and Barbuda   2016                        36 030\n",
+       "3            Argentina   2016                    21 633 587\n",
+       "4            Australia   2016                    18 326 236"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# we check that the DataFrame exportation is correct\n",
+    "register.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country                          0.0\n",
+       "Year                             0.0\n",
+       "Number_of_registered_vehicles    0.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "register_2017=register[register['Year']==2013].sum()\n",
+    "register_2017"
    ]
   }
  ],
